--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 datasets==3.6.0
-torch
-transformers
-sentence-transformers
-duckdb
+torch~=2.9.0
+sentence-transformers~=5.1.2
+duckdb~=1.4.1
+numpy~=2.3.4
